app lock done with connect lifecycle

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,4 +1,20 @@
 {
+    "0":"0",
+    "1":"1",
+    "2":"2",
+    "3":"3",
+    "4":"4",
+    "5":"5",
+    "6":"6",
+    "7":"7",
+    "8":"8",
+    "9":"9",
+    "light":"Light",
+    "dark":"Dark",
+    "system":"System",
+    "hindi":"Hindi",
+    "gujarati":"Gujarati",
+    "english":"English",
     "notes":"Notes",
     "schedules":"Schedules",
     "finished":"Finished",
@@ -51,5 +67,41 @@
     "set_date":"Set date",
     "set_time":"Set time",
     "pined":"Pined",
+    "enable_pin_lock":"Enable pin lock",
+    "app_lock":"App lock",
+    "export_data":"Export data",
+    "export_note_s":"Export Note's",
+    "export_schedules":"Export Schedules",
+    "enable_biometric_lock":"Enable biometric lock",
+    "please_submit_questions":"Please submit questions",
+    "please_set_password":"Please set password",
+    "security_questions":"Security questions",
+    "reset":"Reset",
+    "reset_password":"Reset password",
+    "enter_password":"Enter password",
+    "what_s_your_favorite_movie":"What's your favorite movie",
+    "please_fill_your_favorite_movie_name":"Please fill your favorite movie name",
+    "movie_name":"Movie name",
+    "what_was_your_favorite_school_teacher_s_name":"What was your favorite school teacher's name",
+    "please_fill_your_favorite_school_teacher_s_name":"Please fill your favorite school teacher's name",
+    "teacher_s_name":"Teacher's name",
+    "submit_answer":"Submit answer",
+    "screen_lock_password":"Screen lock password",
+    "password":"Password",
+    "please_fill_password":"Please fill password",
+    "password_length_must_be_atleast_4_digit":"Password length must be atleast 4 digit",
+    "confirm_password":"Confirm password",
+    "please_fill_confirm_password":"Please fill confirm password",
+    "confirm_password_length_must_be_atleast_4_digit":"Confirm password length must be atleast 4 digit",
+    "confirm_password_must_be_same_as_password":"Confirm password must be same as password",
+    "set_password":"Set password",
+    "new_password_set_successfull":"New password set successfull",
+    "new_password_not_set_please_try_again_latter":"New password not set please try again latter",
+    "scan_your_fingerprint_or_face_to_authenticate":"Scan your fingerprint or face to authenticate",
+    "pdf_saved":"PDF Saved",
+    "dounload_pdf":"Dounload PDF",
+    "security_questions_saved_successfully":"Security questions saved successfully",
+    "screen_lock_seted_successfully":"Screen lock seted successfully",
     "our_note_and_to-do_app_respects_your_privacy_we_don't_collect_personal_information_or_store_data_outside_the_app_your_notes_and_to-dos_are_stored_exclusively_on_your_device's_local_storage_we_prioritize_data_security_although_no_method_is_entirely_foolproof_we_may_update_this_policy_and_any_changes_will_be_posted_here_if_you_have_questions_please_contact_us_your_use_of_the_app_indicates_your_consent_to_these_terms":"Our note and to-do app respects your privacy. We don't collect personal information or store data outside the app. Your notes and to-dos are stored exclusively on your device's local storage. We prioritize data security, although no method is entirely foolproof. We may update this policy, and any changes will be posted here. If you have questions, please contact us. Your use of the app indicates your consent to these terms."
+    
 }
