--- a/assets/lang/gu.json
+++ b/assets/lang/gu.json
@@ -1,4 +1,20 @@
 {
+    "0":"૦",
+    "1":"૧",
+    "2":"૨",
+    "3":"૩",
+    "4":"૪",
+    "5":"૫",
+    "6":"૬",
+    "7":"૭",
+    "8":"૮",
+    "9":"૯",
+    "light":"લાઇટ",
+    "dark":"ડાર્ક",
+    "system":"સિસ્ટમ",
+    "hindi":"હિન્દી",
+    "gujarati":"ગુજરાતી",
+    "english":"અંગ્રેજી",
     "notes":"નોંધો",
     "schedules":"સમયપત્રક",
     "finished":"સમાપ્ત",
@@ -51,5 +67,40 @@
     "set_date":"તારીખ સેટ કરો",
     "set_time":"સમય ગોઠવવો",
     "pined":"પિન કરેલ",
+    "enable_pin_lock":"પિન લોક સક્ષમ કરો",
+    "app_lock":"એપ્લિકેશન લોક",
+    "export_schedules":"નિકાસ સમયપત્રક",
+    "export_note_s":"નિકાસ નોંધો",
+    "export_data":"ડેટા નિકાસ કરો",
+    "enable_biometric_lock":"બાયોમેટ્રિક લોક સક્ષમ કરો",
+    "please_submit_questions":"કૃપા કરીને પ્રશ્નો સબમિટ કરો",
+    "please_set_password":"કૃપા કરીને પાસવર્ડ સેટ કરો",
+    "security_questions":"સુરક્ષા પ્રશ્નો",
+    "reset":"રીસેટ",
+    "reset_password":"પાસવર્ડ રીસેટ કરો",
+    "enter_password":"પાસવર્ડ દાખલ કરો",
+    "what_s_your_favorite_movie":"તમારી મનપસંદ ફિલ્મ કઈ છે",
+    "please_fill_your_favorite_movie_name":"કૃપા કરીને તમારા મનપસંદ મૂવીનું નામ ભરો",
+    "movie_name":"ફિલ્મનું નામ",
+    "what_was_your_favorite_school_teacher_s_name":"તમારા મનપસંદ શાળા શિક્ષકનું નામ શું હતું",
+    "please_fill_your_favorite_school_teacher_s_name":"કૃપા કરીને તમારા મનપસંદ શાળા શિક્ષકનું નામ ભરો",
+    "teacher_s_name":"શિક્ષકનું નામ",
+    "submit_answer":"જવાબ સબમિટ કરો",
+    "screen_lock_password":"સ્ક્રીન લોક પાસવર્ડ",
+    "password":"પાસવર્ડ",
+    "please_fill_password":"કૃપા કરીને પાસવર્ડ ભરો",
+    "password_length_must_be_atleast_4_digit":"પાસવર્ડની લંબાઈ ઓછામાં ઓછી 4 અંકની હોવી જોઈએ",
+    "confirm_password":"પાસવર્ડની પુષ્ટિ કરો",
+    "please_fill_confirm_password":"કૃપા કરીને પુષ્ટિ પાસવર્ડ ભરો",
+    "confirm_password_length_must_be_atleast_4_digit":"પુષ્ટિ પાસવર્ડની લંબાઈ ઓછામાં ઓછી 4 અંક હોવી જોઈએ",
+    "confirm_password_must_be_same_as_password":"કન્ફર્મ પાસવર્ડ પાસવર્ડ જેવો જ હોવો જોઈએ",
+    "set_password":"પાસવર્ડ સેટ કરો",
+    "new_password_set_successfull":"નવો પાસવર્ડ સેટ સફળતાપૂર્વક",
+    "new_password_not_set_please_try_again_latter":"નવો પાસવર્ડ સેટ નથી, કૃપા કરીને પછીથી ફરી પ્રયાસ કરો",
+    "scan_your_fingerprint_or_face_to_authenticate":"પ્રમાણિત કરવા માટે તમારી ફિંગરપ્રિન્ટ અથવા ચહેરો સ્કેન કરો",
+    "pdf_saved":"PDF સાચવી",
+    "dounload_pdf":"PDF ડાઉનલોડ કરો",
+    "security_questions_saved_successfully":"સુરક્ષા પ્રશ્નો સફળતાપૂર્વક સાચવ્યા",
+    "screen_lock_seted_successfully":"સ્ક્રીન લૉક સફળતાપૂર્વક સેટ કર્યું",
     "our_note_and_to-do_app_respects_your_privacy_we_don't_collect_personal_information_or_store_data_outside_the_app_your_notes_and_to-dos_are_stored_exclusively_on_your_device's_local_storage_we_prioritize_data_security_although_no_method_is_entirely_foolproof_we_may_update_this_policy_and_any_changes_will_be_posted_here_if_you_have_questions_please_contact_us_your_use_of_the_app_indicates_your_consent_to_these_terms":"અમારી નોંધ અને કરવા માટેની એપ્લિકેશન તમારી ગોપનીયતાને માન આપે છે. અમે વ્યક્તિગત માહિતી એકત્રિત કરતા નથી અથવા એપ્લિકેશનની બહાર ડેટા સ્ટોર કરતા નથી. તમારી નોંધો અને કરવાનાં કાર્યો ફક્ત તમારા ઉપકરણના સ્થાનિક સ્ટોરેજ પર સંગ્રહિત થાય છે. અમે ડેટા સુરક્ષાને પ્રાથમિકતા આપીએ છીએ, જો કે કોઈપણ પદ્ધતિ સંપૂર્ણપણે ફૂલપ્રૂફ નથી. અમે આ નીતિને અપડેટ કરી શકીએ છીએ, અને કોઈપણ ફેરફારો અહીં પોસ્ટ કરવામાં આવશે. જો તમને પ્રશ્નો હોય, તો કૃપા કરીને અમારો સંપર્ક કરો. એપ્લિકેશનનો તમારો ઉપયોગ આ શરતો માટે તમારી સંમતિ દર્શાવે છે."
 }
