--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -1,4 +1,20 @@
 {
+    "0":"०",
+    "1":"१",
+    "2":"२",
+    "3":"३",
+    "4":"४",
+    "5":"५",
+    "6":"६",
+    "7":"७",
+    "8":"८",
+    "9":"९",
+    "light":"लाइट",
+    "dark":"डार्क",
+    "system":"सिस्टम",
+    "hindi":"हिंदी",
+    "gujarati":"गुजराती",
+    "english":"अंग्रेज़ी",
     "notes":"टिप्पणियाँ",
     "schedules":"अनुसूचियों",
     "finished":"खत्म",
@@ -39,6 +55,9 @@
     "privacy_policy":"गोपनीयता नीति",
     "app_mode":"ऐप मोड",
     "app_language":"ऐप भाषा",
+    "app_lock":"एप्लिकेशन ताला",
+    "export_note_s":"नोट्स निर्यात करें",
+    "export_schedules":"निर्यात कार्यक्रम",
     "save_image":"चित्र को सेव करें",
     "navigate_up":"ऊपर नेविगेट करें",
     "share_schedules":"शेड्यूल साझा करें",
@@ -51,5 +70,37 @@
     "set_date":"तारीख सेट करें",
     "set_time":"निर्धारित समय",
     "pined":"चीड़युक्त",
+    "enable_pin_lock":"पिन लॉक सक्षम करें",
+    "enable_biometric_lock":"बायोमेट्रिक लॉक सक्षम करें",
+    "please_submit_questions":"कृपया प्रश्न सबमिट करें",
+    "please_set_password":"कृपया पासवर्ड सेट करें",
+    "security_questions":"सुरक्षा प्रश्न",
+    "reset":"रीसेट",
+    "reset_password":"पासवर्ड रीसेट",
+    "enter_password":"पास वर्ड दर्ज करें",
+    "export_data":"निर्यात जानकारी",
+    "what_s_your_favorite_movie":"आपकी पसंदीदा फिल्म कौनसी है",
+    "please_fill_your_favorite_movie_name":"कृपया अपनी पसंदीदा फिल्म का नाम भरें",
+    "movie_name":"फिल्म का नाम",
+    "what_was_your_favorite_school_teacher_s_name":"आपके पसंदीदा स्कूल शिक्षक का नाम क्या था",
+    "please_fill_your_favorite_school_teacher_s_name":"कृपया अपने पसंदीदा स्कूल शिक्षक का नाम भरें",
+    "teacher_s_name":"शिक्षक का नाम",
+    "submit_answer":"उत्तर सबमिट करें",
+    "screen_lock_password":"स्क्रीन लॉक पासवर्ड",
+    "password":"पासवर्ड",
+    "please_fill_password":"कृपया पासवर्ड भरें",
+    "password_length_must_be_atleast_4_digit":"पासवर्ड की लंबाई कम से कम 4 अंक होनी चाहिए",
+    "confirm_password":"पासवर्ड की पुष्टि कीजिये",
+    "please_fill_confirm_password":"कृपया कन्फर्म पासवर्ड भरें",
+    "confirm_password_length_must_be_atleast_4_digit":"पुष्टि करें कि पासवर्ड की लंबाई कम से कम 4 अंक होनी चाहिए",
+    "confirm_password_must_be_same_as_password":"पुष्टिकरण पासवर्ड पासवर्ड के समान ही होना चाहिए",
+    "set_password":"सांकेतिक शब्द लगना",
+    "new_password_set_successfull":"नया पासवर्ड सेट सफल",
+    "new_password_not_set_please_try_again_latter":"नया पासवर्ड सेट नहीं है कृपया बाद में पुनः प्रयास करें",
+    "scan_your_fingerprint_or_face_to_authenticate":"प्रमाणित करने के लिए अपना फिंगरप्रिंट या चेहरा स्कैन करें",
+    "pdf_saved":"PDF सहेजा गया",
+    "dounload_pdf":"डाउनलोड PDF",
+    "security_questions_saved_successfully":"सुरक्षा प्रश्न सफलतापूर्वक सहेजे गए",
+    "screen_lock_seted_successfully":"स्क्रीन लॉक सफलतापूर्वक सेट हो गया",
     "our_note_and_to-do_app_respects_your_privacy_we_don't_collect_personal_information_or_store_data_outside_the_app_your_notes_and_to-dos_are_stored_exclusively_on_your_device's_local_storage_we_prioritize_data_security_although_no_method_is_entirely_foolproof_we_may_update_this_policy_and_any_changes_will_be_posted_here_if_you_have_questions_please_contact_us_your_use_of_the_app_indicates_your_consent_to_these_terms":"हमारा नोट और टू-डू ऐप आपकी गोपनीयता का सम्मान करता है। हम व्यक्तिगत जानकारी एकत्र नहीं करते हैं या ऐप के बाहर डेटा संग्रहीत नहीं करते हैं। आपके नोट्स और कार्य विशेष रूप से आपके डिवाइस के स्थानीय संग्रहण पर संग्रहीत होते हैं। हम डेटा सुरक्षा को प्राथमिकता देते हैं, हालांकि कोई भी तरीका पूरी तरह से अचूक नहीं है। हम इस नीति को अपडेट कर सकते हैं, और कोई भी बदलाव यहां पोस्ट किया जाएगा। यदि आपके कोई सवाल हैं, कृपया हमसे संपर्क करें। ऐप का आपका उपयोग इन शर्तों के प्रति आपकी सहमति को दर्शाता है।"
 }
