add custom sound in notification

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -21,6 +21,7 @@
     "archive":"Archive",
     "deleted":"Deleted",
     "settings":"Settings",
+    "permisions":"Permisions",
     "no_data_found":"No Data Found",
     "title":"Title",
     "note":"Note",
