--- a/assets/lang/gu.json
+++ b/assets/lang/gu.json
@@ -21,6 +21,7 @@
     "archive":"આર્કાઇવ",
     "deleted":"કાઢી નાખ્યું",
     "settings":"સેટિંગ્સ",
+    "permisions":"પરવાનગીઓ",
     "no_data_found":"કોઈ ડેટા મળ્યો નથી",
     "title":"શીર્ષક",
     "note":"નૉૅધ",
