--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -21,6 +21,7 @@
     "archive":"पुरालेख",
     "deleted":"हटाए गए",
     "settings":"समायोजन",
+    "permisions":"अनुमतियां",
     "no_data_found":"डाटा प्राप्त नहीं हुआ",
     "title":"शीर्षक",
     "note":"टिप्पणी",
