done new bottom navigation functionality

--- a/assets/lang/gu.json
+++ b/assets/lang/gu.json
@@ -9,6 +9,9 @@
     "7":"૭",
     "8":"૮",
     "9":"૯",
+    "delete_forever":"કાયમ માટે કાઢો",
+    "restore":"પુનઃસ્થાપિત",
+    "schedule":"સમયપત્રક",
     "light":"લાઇટ",
     "dark":"ડાર્ક",
     "system":"સિસ્ટમ",
@@ -24,7 +27,7 @@
     "permisions":"પરવાનગીઓ",
     "no_data_found":"કોઈ ડેટા મળ્યો નથી",
     "title":"શીર્ષક",
-    "note":"નૉૅધ",
+    "note":"નૉધ",
     "delete":"કાઢી નાખો",
     "note_copied":"નોંધ નકલ કરી",
     "copy_note":"નોંધની નકલ કરો",
