--- a/assets/lang/hi.json
+++ b/assets/lang/hi.json
@@ -9,6 +9,9 @@
     "7":"७",
     "8":"८",
     "9":"९",
+    "delete_forever":"हमेशा के लिए हटाएं",
+    "restore":"पुनर्स्थापित",
+    "schedule":"अनुसूचि",
     "light":"लाइट",
     "dark":"डार्क",
     "system":"सिस्टम",
