--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -9,6 +9,9 @@
     "7":"7",
     "8":"8",
     "9":"9",
+    "delete_forever":"Delete forever",
+    "restore":"Restore",
+    "schedule":"Schedule",
     "light":"Light",
     "dark":"Dark",
     "system":"System",
