add animation when open screens

--- a/assets/lang/gu.json
+++ b/assets/lang/gu.json
@@ -27,7 +27,7 @@
     "permisions":"પરવાનગીઓ",
     "no_data_found":"કોઈ ડેટા મળ્યો નથી",
     "title":"શીર્ષક",
-    "note":"નૉધ",
+    "note":"નોધ",
     "delete":"કાઢી નાખો",
     "note_copied":"નોંધ નકલ કરી",
     "copy_note":"નોંધની નકલ કરો",
