--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -9,6 +9,11 @@
     "7":"7",
     "8":"8",
     "9":"9",
+
+    "add_note":"Add Note",
+    "add_schedule":"Add Schedule",
+    "scane_note":"Scane Note",
+
     "delete_forever":"Delete forever",
     "restore":"Restore",
     "schedule":"Schedule",
@@ -106,6 +111,7 @@
     "dounload_pdf":"Dounload PDF",
     "security_questions_saved_successfully":"Security questions saved successfully",
     "screen_lock_seted_successfully":"Screen lock seted successfully",
+    "screen_lock_pin_saved_successfully":"Screen lock pin saved successfully",
     "our_note_and_to-do_app_respects_your_privacy_we_don't_collect_personal_information_or_store_data_outside_the_app_your_notes_and_to-dos_are_stored_exclusively_on_your_device's_local_storage_we_prioritize_data_security_although_no_method_is_entirely_foolproof_we_may_update_this_policy_and_any_changes_will_be_posted_here_if_you_have_questions_please_contact_us_your_use_of_the_app_indicates_your_consent_to_these_terms":"Our note and to-do app respects your privacy. We don't collect personal information or store data outside the app. Your notes and to-dos are stored exclusively on your device's local storage. We prioritize data security, although no method is entirely foolproof. We may update this policy, and any changes will be posted here. If you have questions, please contact us. Your use of the app indicates your consent to these terms."
     
 }
